2003-10-22  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* Support `white space handling' in SVG text.
	
	* src/sp-text.c (sp_string_set_shape): Implement xml_space attribute.
	(sp_string_calculate_dimensions): Implement xml_space attribute.

	* src/attribute.c: Add SP_ATTR_XML_SPACE attribute.

2003-10-21  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-text.c (sp_text_sequence): Implement

	* src/sp-pattern.c (sp_pattern_sequence): Implement

	* src/sp-object.c (sp_object_invoke_sequence): Rename and signature change

	* src/sp-object-group.c (sp_objectgroup_sequence): Implement

	* src/sp-item-group.c (sp_group_sequence): update

	* src/sp-gradient.c (sp_gradient_sequence): Implement

	* src/sp-defs.c (sp_defs_sequence): Implement

	* src/selection-chemistry.c (sp_selection_item_next): Cleanup
	(sp_selection_item_prev): Ditto

	* src/document.c (sp_document_object_sequence_get): New method

	* src/desktop.c (sp_desktop_scroll_absolute_center_desktop): New method
	(sp_desktop_scroll_relative_canvas): Renamed

2003-10-19  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/node-context.c (sp_node_context_root_handler): Catch delete, so
	default action does not destroy selected object

2003-10-12  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/nr-type-directory.c (nr_type_read_private_list): Test
	for > 1 tokens, fixes potential crash

	* src/libnrtype/nr-type-primitives.c: Make type dict frontend
	to ArikkeiDict

	* src/libarikkei/arikkei-dict.c: Implement

2003-10-06  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libarikkei/Makefile.am: New stuff from ariariki

	* src/libnrtype/nr-type-xft.c (nr_type_read_xft_list): Moved here

	* src/libnrtype/nr-type-directory.c (nr_type_build): From ariariki
	(nr_type_read_private_list): Use libarikkei tokenizer
	(nr_type_register): Made public

	* src/libnrtype/Makefile.am: Added libarikkei stuff

	* configure.in: Added libarikkei/Makefile

2003-09-18  Mitsuru Oka <oka@mediasite.co.jp>
