@@ -1,28 +1,25 @@
+ABOUT-NLS
+GNOME_Sodipodi.oaf
 Makefile.in
 Makefile
-autom4te.cache
+aclocal.m4
+autom4te*.cache
 configure
+config.cache
 config.log
 config.h.in
 config.h
+config.status
 config.sub
 config.guess
 ltconfig
 ltmain.sh
-config.cache
-stamp-h
-config.status
+stamp-h*
 libtool
-aclocal.m4
 intl
-config.h.in
-stamp-h.in
-ABOUT-NLS
 sodipodi.spec
 sodipodi.1
 *.svg
 intltool-*
 sodipodi.desktop
-GNOME_Sodipodi.oaf
-autom4te-2.5x.cache
 toru
