@@ -34,10 +34,10 @@ static void nr_typeface_gnome_font_free (NRFont *font);
 
 static NRTypeFaceClass *parent_class;
 
-NRType
+unsigned int
 nr_typeface_gnome_get_type (void)
 {
-	static NRType type = 0;
+	static unsigned int type = 0;
 	if (!type) {
 		type = nr_object_register_type (NR_TYPE_TYPEFACE,
 						"NRTypeFaceGnome",
